[package]
name = "minpty"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
pty = "0.2"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api"]
